[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/Mitr-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Mitr-Light-16.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/sprites/icons/volume-off.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/icons/music-off.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/icons/volume-high.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/icons/music.png" type="Texture" id=6]
[ext_resource path="res://src/ui/Menu.gd" type="Script" id=7]
[ext_resource path="res://assets/sprites/The Fall.png" type="Texture" id=8]
[ext_resource path="res://assets/audio/menu-btn.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 56
use_filter = true
font_data = ExtResource( 1 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMusic" type="TextureButton" parent="Control"]
self_modulate = Color( 0.2, 0.2, 0.2, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.7032
margin_top = -83.0815
margin_right = 80.7032
margin_bottom = -35.0815
rect_pivot_offset = Vector2( 24, 24 )
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control/ButtonMusic"]
stream = ExtResource( 9 )
volume_db = -30.0

[node name="ButtonSFX" type="TextureButton" parent="Control"]
self_modulate = Color( 0.2, 0.2, 0.2, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 89.4878
margin_top = -84.5681
margin_right = 137.488
margin_bottom = -36.5681
rect_pivot_offset = Vector2( 24, 24 )
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control/ButtonSFX"]
stream = ExtResource( 9 )
volume_db = -30.0

[node name="LD48" type="Label" parent="Control"]
margin_left = 163.0
margin_top = 998.0
margin_right = 222.0
margin_bottom = 1037.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "LD48"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Copyright" type="Label" parent="Control"]
margin_left = 1443.79
margin_top = 997.837
margin_right = 1870.79
margin_bottom = 1036.84
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "Created and Developed by Jun Kajii"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressStart" type="Label" parent="Control"]
margin_left = 708.0
margin_top = 785.0
margin_right = 1212.0
margin_bottom = 874.0
rect_pivot_offset = Vector2( 252, 44 )
mouse_filter = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.133333, 0.133333, 0.133333, 1 )
text = "— PRESS START —"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/PressStart"]

[node name="The Fall" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -427.5
margin_top = 113.393
margin_right = 427.5
margin_bottom = 265.393
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Control/ButtonMusic" to="." method="_on_ButtonMusic_mouse_entered"]
[connection signal="mouse_exited" from="Control/ButtonMusic" to="." method="_on_ButtonMusic_mouse_exited"]
[connection signal="toggled" from="Control/ButtonMusic" to="." method="_on_ButtonMusic_toggled"]
[connection signal="mouse_entered" from="Control/ButtonSFX" to="." method="_on_ButtonSFX_mouse_entered"]
[connection signal="mouse_exited" from="Control/ButtonSFX" to="." method="_on_ButtonSFX_mouse_exited"]
[connection signal="toggled" from="Control/ButtonSFX" to="." method="_on_ButtonSFX_toggled"]
[connection signal="mouse_entered" from="Control/PressStart" to="." method="_on_PressStart_mouse_entered"]
[connection signal="mouse_exited" from="Control/PressStart" to="." method="_on_PressStart_mouse_exited"]
